@@ -2,9 +2,9 @@
 Snippet: Login
 --------------------
 Version: 1.0
-Since: June 25, 2009
-Author: Jason Coward <jason@collabpad.com>
-        Shaun McCormick <shaun@collabpad.com>
+Since: June 21, 2010
+Author: Jason Coward <jason@modxcms.com>
+        Shaun McCormick <shaun@modxcms.com>
 
 This component loads a simple login and logout form. It also comes packaged
 with ForgotPassword and ResetPassword snippets, which allow the user to put
@@ -91,4 +91,4 @@ See the Snippet Properties for more options.
 
 Thanks,
 Jason Coward & Shaun McCormick
-MODx Foundation
+MODx, LLC
