@@ -2,7 +2,7 @@
 /**
  * Register
  *
- * Copyright 2009 by Shaun McCormick <shaun@collabpad.com>
+ * Copyright 2010 by Shaun McCormick <shaun@modxcms.com>
  *
  * Register is free software; you can redistribute it and/or modify it under the
  * terms of the GNU General Public License as published by the Free Software
@@ -24,8 +24,8 @@
  *
  * Handles User registrations.
  *
- * @author Shaun McCormick <shaun@collabpad.com>
- * @copyright Copyright &copy; 2009
+ * @author Shaun McCormick <shaun@modxcms.com>
+ * @copyright Copyright &copy; 2010
  * @license http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License
  * version 2 or (at your option) any later version.
  * @package login
