@@ -2,8 +2,8 @@
 /**
  * Login
  *
- * Copyright 2010 by Jason Coward <jason@collabpad.com> and Shaun McCormick
- * <shaun@collabpad.com>
+ * Copyright 2010 by Jason Coward <jason@modxcms.com> and Shaun McCormick
+ * <shaun@modxcms.com>
  *
  * Login is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License as published by the Free
